# QuickINI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: config.h.in  parser.h  version.h.in
src/: parser.c
tests/: test.c
